fixing spacing in bulleted lists

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -379,4 +379,5 @@ details summary::before {
     margin: 0;
     padding: 0;
     padding-left:0;
+    margin-left: 15px
    }
